--- a/common/pom.xml
+++ b/common/pom.xml
@@ -20,6 +20,13 @@
         </dependency>
 
         <!-- INJECT DEPENDENCIES -->
+
+
+        <dependency>
+            <groupId>com.vaadin.external.google</groupId>
+            <artifactId>android-json</artifactId>
+            <version>0.0.20131108.vaadin1</version>
+        </dependency>
     </dependencies>
 
     <!-- The following are profiles to cover special cases -->
